--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ footer {
 
 /* Brighter Titles in Hacker Mode */
 .hacker-mode h2 {
-    color: #586dad; /* Slightly brighter green for better visibility */
+    color: #333846; /* Slightly brighter green for better visibility */
 }
 
 /* Hacker Mode Navigation Links */
